# tchess

./: README.md
game/: Cargo.toml
game/src/: lib.rs  types.rs
game/tests/: test.rs
tchess/: Cargo.toml
tchess/src/: lib.rs
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  Board.tsx  SidePanel.tsx  cbor.ts  common.ts  game_state.ts  index.css  transactions.ts  wallet.ts
web/src/connect/: TariConnectButton.tsx  TariWalletSelectionDialog.tsx
